# ponderada-coletando-metricas

./: .gitignore  README.md  experiment_config.json  pyproject.toml  requirements-dev.txt
.github/workflows/: ci-metrics.yml
data/: metrics.csv  raw_runs.json  run_summary.csv  steps.csv
docs/: relatorio.md
frontend/: app.js  index.html  styles.css
scripts/: collect_github_metrics.py  extract_test_metrics.py  generate_charts.py  render_report.py  run_experiment.py
src/leitura_lab/: __init__.py  app.py
src/pipeline_lab/: __init__.py  calculator.py
tests/: conftest.py  test_api.py  test_calculator.py  test_experiment_variations.py
